fix: Section in Dialog in Section cause large gap

--- a/packages/skcom-css/src/components/section.scss
+++ b/packages/skcom-css/src/components/section.scss
@@ -11,6 +11,6 @@
   gap: 0.75rem;
 }
 
-.skc-section:has(.skc-section) {
+.skc-section:has(> .skc-section) {
   gap: 1.25rem;
 }
